--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                   <strong>Unidad 4</strong>
                 </li>
                 Variables aleatorias y distribuciones de probabilidad
-                <li><strong>Unidad 4</strong></li>
+                <li><strong>Unidad R</strong></li>
                 Conceptos basicos de programacion en R, manipulación de datos y graficos en R.
               </ul>
 
               <h3>Evaluación</h3>
-              <img src="src/eval.jpeg" class="img-fluid" alt="Responsive image">
+              <img src="src/eval.jpeg" class="img-fluid" alt="Responsive image" width="900">
               <h3>Contacto</h3>
               <ul>
                 <li>
