--- a/sesion2.html
+++ b/sesion2.html
@@ -70,9 +70,15 @@
             </div>  
 
             
-            
+            <div class="mb-3">
+              <ul>
+                <li>
+                  <a href="https://drive.google.com/file/d/1BCg93U3u7c3TAQiBipJMYi0g0wkTI201/view?usp=sharing">Script sesión 2</a>
+                </li>
+              </ul>
+            </div>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QBI8KfNd6G8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/B5p9o4nkNEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>   
         </div>
      </div>
