--- a/sesion1.html
+++ b/sesion1.html
@@ -68,7 +68,13 @@
                 Las sesiones serán grabadas y subidas en su apartado respectivo, una vez sean realizadas.
                 También serán subidos los scripts usados en cada sesión.
               </div>
-
+              <div class="mb-3">
+                <ul>
+                  <li>
+                    <a href="https://drive.google.com/file/d/1ARD88u5YjHJgqEKFOpSn5QZnAcr_fanb/view?usp=sharing">Script sesión 1</a>
+                  </li>
+                </ul>
+              </div>
               <div class="embed-responsive embed-responsive-16by9 mb-3">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KTuyYn5-3R4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
