--- a/sesion3.html
+++ b/sesion3.html
@@ -68,7 +68,15 @@
               Las sesiones serán grabadas y subidas en su apartado respectivo, una vez sean realizadas.
               También serán subidos los scripts usados en cada sesión.
             </div>
-   
+            
+
+            <div class="mb-3">
+              <ul>
+                <li>
+                  <a href="https://drive.google.com/drive/folders/1JL00NZlNIi5qFqWNdzu9I8ZG4TW0hjqb?usp=sharing">Bases</a>
+                </li>
+              </ul>
+            </div>
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QBI8KfNd6G8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
